# psk31-fpga

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hex2v
bench/: CMakeLists.txt  Testbench.h  dds_sine_tb.cpp  i2s_clk_tb.cpp
cmake/: hdl.cmake  verilator.cmake
src/: CMakeLists.txt  dds_sine.v  sine_lut.hex
synthesis/: CMakeLists.txt  icestick.pcf  psk31_top.v
